// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# integration test ## should generate design 1`] = `
"info: Initializing git repository testoutput/.git
info: loading extension src/test/fixture/ext._
info: loading extension src/test/fixture/toplevel._
info: Generating testoutput/cella from template src/test/fixture/master._
info: Generating testoutput/cellb from template src/test/fixture/master._
info: Generating testoutput/toplevel from template src/test/fixture/toplevel._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 1`] = `
"info: Initializing git repository testoutput/.git
info: loading extension src/test/fixture/ext._
info: loading extension src/test/fixture/toplevel._
info: Generating testoutput/cella from template src/test/fixture/master._
info: Generating testoutput/cellb from template src/test/fixture/master._
info: Generating testoutput/toplevel from template src/test/fixture/toplevel._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 2`] = `
"info: Opening git repository testoutput/.git
info: Stashing branch master
info: Attempting to use branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
info: loading extension src/test/fixture/ext._
info: loading extension src/test/fixture/toplevel._
info: Generating testoutput/cella from template src/test/fixture/master._
info: Generating testoutput/cellb from template src/test/fixture/master._
info: Generating testoutput/toplevel from template src/test/fixture/toplevel._
warn: Checkout out branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
warn: Nothing changed in generated files
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 3`] = `
"info: Opening git repository testoutput/.git
info: Stashing branch master
info: Attempting to use branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
info: loading extension src/test/fixture/ext._
info: loading extension src/test/fixture/toplevel._
info: Generating testoutput/cella from template src/test/fixture/master._
info: Generating testoutput/cellb from template src/test/fixture/master._
info: Generating testoutput/toplevel from template src/test/fixture/toplevel._
warn: Checkout out branch master-sgen-generated
info: Committed generated files
warn: Checkout out branch master
warn: Generator branch master-sgen-generated was modified

info: sgen is done
"
`;

exports[`# integration test ## should print help options 1`] = `
"Usage:
  node sgen.js [OPTION]

Options:
  -m, --map=ARG+       mapping files
  -d, --design=ARG+    design files
  -e, --extension=ARG+ extension directories or files
  -o, --output=ARG     output directory for generated files
      --overwrite=ARG  Overwrite modes, can be one of skip, regen, error or merge                         (default: skip)
      --forceOverwrite Override overwrite flags in the generator map with the one provided on --overwrite
  -h, --help           display this help
"
`;
